--- a/Areas/AdminPharmacyManagement/Views/OrderDetails/Delete.cshtml
+++ b/Areas/AdminPharmacyManagement/Views/OrderDetails/Delete.cshtml
@@ -1,46 +1,69 @@
 ﻿@model PharmacyManagement.Models.OrderDetail
 
 @{
-    ViewData["Title"] = "Delete";
+    ViewData["Title"] = "Xóa chi tiết đơn hàng";
     Layout = "~/Areas/AdminPharmacyManagement/Views/Shared/Admin.cshtml";
 }
 
-<h1>Delete</h1>
+<div class="container mt-4">
+    <h1 class="text-danger mb-4"><i class="fas fa-trash-alt mr-2"></i> Xóa chi tiết đơn hàng</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>OrderDetail</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Quantity)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Quantity)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Price)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Price)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Medicine)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Medicine.MedicineId)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Order)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Order.OrderId)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="OrderDetailId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
+    <div class="alert alert-danger" role="alert">
+        Bạn có chắc chắn muốn xóa chi tiết đơn hàng này?
+    </div>
+
+    <div class="card shadow">
+        <div class="card-body">
+            <dl class="row">
+                <dt class="col-sm-3 font-weight-bold"><i class="fas fa-boxes mr-2"></i> Số lượng</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Quantity)</dd>
+
+                <dt class="col-sm-3 font-weight-bold"><i class="fas fa-dollar-sign mr-2"></i> Giá tiền</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Price)</dd>
+
+                <dt class="col-sm-3 font-weight-bold"><i class="fas fa-pills mr-2"></i> Tên thuốc</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Medicine.MedicineId)</dd>
+
+                <dt class="col-sm-3 font-weight-bold"><i class="fas fa-file-invoice-dollar mr-2"></i> Mã đơn hàng</dt>
+                <dd class="col-sm-9">@Html.DisplayFor(model => model.Order.OrderId)</dd>
+            </dl>
+
+            <form asp-action="Delete" class="mt-4">
+                <input type="hidden" asp-for="OrderDetailId" />
+                <button type="submit" class="btn btn-danger"><i class="fas fa-trash mr-2"></i> Xóa</button>
+                <a asp-action="Index" class="btn btn-secondary"><i class="fas fa-arrow-left mr-2"></i> Quay lại danh sách</a>
+            </form>
+        </div>
+    </div>
 </div>
+
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+<style>
+    .text-danger {
+        color: #dc3545 !important;
+    }
+
+    .btn-danger {
+        background-color: #dc3545;
+        border-color: #dc3545;
+    }
+
+        .btn-danger:hover {
+            background-color: #c82333;
+            border-color: #c82333;
+        }
+
+    .btn-secondary {
+        background-color: #fff;
+        border-color: #000;
+        color: #000;
+    }
+
+        .btn-secondary:hover {
+            background-color: #eee;
+        }
+
+    .card {
+        border: 1px solid #ddd;
+    }
+</style>
